[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.43"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
polkadot-cli = { path = "cli", features = [ "polkadot-native", "kusama-native", "westend-native", "rococo-native" ]  }
polkadot-node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
polkadot-overseer = { path = "node/overseer" }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
polkadot-core-primitives = { path = "core-primitives" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"erasure-coding/fuzzer",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf/common",
	"node/core/pvf/execute-worker",
	"node/core/pvf/prepare-worker",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/gum",
	"node/gum/proc-macro",
	"node/metrics",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"parachain/test-parachains/undying",
	"parachain/test-parachains/undying/collator",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

[badges]
maintenance = { status = "actively-developed" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = {opt-level = 3}
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
jemalloc-allocator = ["polkadot-node-core-pvf-prepare-worker/jemalloc-allocator", "polkadot-overseer/jemalloc-allocator"]

[patch."https://github.com/paritytech/substrate"]
node-template = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-api-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-core = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-core-hashing = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-externalities = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-std = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-storage = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-tracing = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-io = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-keystore = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-state-machine = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-trie = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-weights = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-runtime-client = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-block-builder = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-client-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-executor = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-executor-common = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-allocator = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-runtime-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-version = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-core-hashing-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-version-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-tracing = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-tracing-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-blockchain = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-inherents = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-test-primitives = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-database = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-runtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-executive = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-system = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-balances = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-babe = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-authorship = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-session = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-timestamp = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-session = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-staking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-election-provider-solution-type = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-utils = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-utils-derive = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-service = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-chain-spec-derive = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-common = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-utils = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-light = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-sync = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
fork-tree = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-telemetry = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-client-db = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-state-db = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
kitchensink-runtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-benchmarking-pallet-pov = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-primitives = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-alliance = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-collective = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-identity = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-asset-conversion = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-assets = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-asset-rate = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-bounties = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-treasury = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-utility = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-root-testing = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-contracts = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-contracts-primitives = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-contracts-proc-macro = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-proxy = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-preimage = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-core-fellowship = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-democracy = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-staking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-glutton = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-offences = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-keyring = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-im-online = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-indices = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-lottery = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-test-pallet = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-membership = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-message-queue = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-mmr = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-multisig = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nft-fractionalization = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nfts = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nis = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nomination-pools = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-recovery = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-referenda = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-remark = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-salary = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-session-benchmarking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-society = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-remote-externalities = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-rpc-client = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-statement = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-statement-store = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-sudo = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-tips = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-transaction-storage = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-uniques = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-vesting = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-block-builder = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-offchain = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-informant = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-keystore = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-bitswap = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-transactions = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-runtime-transaction-pool = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-client = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-offchain = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime-interface-test-wasm = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-metadata-ir = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-cli = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-template-runtime = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-aura = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-template = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-proposer-metrics = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-statement-store = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-cli-test-utils = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-bench = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-testing = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-executor = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-cli = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-inspect = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
mmr-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-network-statement = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-storage-monitor = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-service-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-frame-cli = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
chain-spec-builder = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
subkey = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-beefy = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-beefy = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sc-consensus-pow = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-consensus-pow = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
mmr-gadget = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-atomic-swap = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-bags-list-fuzzer = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-bags-list-remote-tests = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-beefy = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
binary-merkle-tree = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-election-provider-e2e-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-election-solution-type-fuzzer = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-examples = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-default-config-example = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-dev-mode = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-example-basic = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-example-kitchensink = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-example-offchain-worker = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-example-split = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nicks = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-node-authorization = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nomination-pools-fuzzer = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-nomination-pools-test-staking = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-scored-pool = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
pallet-root-offences = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
frame-support-test-compile-pass = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-api-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-application-crypto-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-arithmetic-fuzzer = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-crypto-ec-utils = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-genesis-builder = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-npos-elections-fuzzer = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime-interface-test = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
sp-runtime-interface-test-wasm-deprecated = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-template-release = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-test-utils-test-crate = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
substrate-frame-rpc-support = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
generate-bags = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }
node-runtime-generate-bags = { git = "https://github.com/paritytech//substrate.git" , branch = "bkchr-execution-strategies-remove" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
